Added sample and integration test using sample

--- a/tests/Filters/Error/Tests.Error/Tests.Error.csproj
+++ b/tests/Filters/Error/Tests.Error/Tests.Error.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\Filters\Error\Error.csproj" />
+    <ProjectReference Include="..\..\..\..\src\Filters\Error\Error.csproj" />
   </ItemGroup>
 
 </Project>
