Add integration tests

--- a/samples/Authentication/JWT/appsettings.json
+++ b/samples/Authentication/JWT/appsettings.json
@@ -8,11 +8,11 @@
   "JWT": {
     "SecretKey": "test-key-test-key-test-key",
     "IssuerOptions": {
-      "Issuer": "EMG API",
+      "Issuer": "Test API",
       "Audience": "https://localhost:5001"
     },
     "Client": {
-      "Username": "EMG",
+      "Username": "Test",
       "Password": "testing"
     }
   }
